# CallCentre

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  compile.sh
src/C++/main/: Call.cpp  CallCentre.cpp  CallHandler.cpp  Employee.cpp  main.cpp
src/include/main/: Call.h  CallCentre.h  CallHandler.h  Director.h  Employee.h  Manager.h  Respondent.h
